spec/error_record_field_inferred.expected
spec/error_record_field_inferred.kex:12:16: error: `distance` expects argument 1 to be Point, but got String

distance : Point -> Integer
Aborted: fix type errors before running (use --no-check to skip).
